--- a/index.html
+++ b/index.html
@@ -119,13 +119,15 @@
       </div>
       <button class="prev"><img src="images/arrow-left.png" alt="Previous"></button>
       <button class="next"><img src="images/arrow-right.png" alt="Next"></button>
+      <br>
       <div class="carousel-indicators">
-        <button class="active" data-slide="0"></button>
-        <button data-slide="1"></button>
-        <button data-slide="2"></button>
+        <!-- <button class="active" data-slide="0"></button> -->
+         <button class="indicator active" data-slide="0"></button>
+        <button class="indicator" data-slide="1"></button>
+        <button class="indicator" data-slide="2"></button>
       </div>
     </div>
-
+<br>
     <!-- 'Just Added' Section -->
      <div class="just-added">
         <div class="item">
