--- a/index.html
+++ b/index.html
@@ -1,147 +1,169 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>New Balance</title>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>New Balance</title>
 
-    <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com"/>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet"/>
 
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer"/>
 
-    <!-- Custom CSS & JS -->
-    <link rel="stylesheet" href="/css/main.css" />
-    <script defer src="/js/main.js"></script>
-  </head>
-  <body>
-    <header>
-      <nav class="navbar">
-        <div class="nav-left">
-          <a href="#" class="logo">
-            <img src="images/nblogo.png" alt="New Balance Logo">
-          </a>
-        </div>
-        <ul class="nav-links">
-          <li><a href="#new" class="new-link">New</a></li>
+  <!-- Styles -->
+  <link rel="stylesheet" href="/css/main.css"/>
+  <script defer src="/js/main.js"></script>
+</head>
+<body>
 
-          <!-- Men Dropdown -->
-          <li class="dropdown">
-            <a href="#men" class="men-link">Men</a>
-            <ul class="dropdown-menu">
-              <div class="menu-container">
-                <div class="menu-column">
-                  <a href="#launch-calendar" class="btn-black">Launch Calendar</a>
-                  <a href="#new-arrivals" class="link">New Arrivals</a>
-                  <a href="#best-sellers" class="link">Best Sellers</a>
-                </div>
-
-                <div class="menu-column">
-                  <a href="#shoes" class="link-black">Shoes</a>
-                  <a href="#clothes" class="link-black">Clothes</a>
-                  <a href="#accessories" class="link-black">Accessories</a>
-                  <a href="#clearance" class="link-red">Clearance</a>
-                </div>
-
-                <div class="menu-image">
-                  <img src="images/menuImage.jpg" alt="Men's Collection">
-                </div>
-              </div>
-            </ul>
-          </li>
-
-          <!-- Women Dropdown -->
-          <li class="dropdown">
-            <a href="#women" class="women-link">Women</a>
-            <ul class="dropdown-menu">
-              <div class="menu-container">
-                <div class="menu-column">
-                  <a href="#launch-calendar" class="btn-black">Launch Calendar</a>
-                  <a href="#new-arrivals" class="link">New Arrivals</a>
-                  <a href="#best-sellers" class="link">Best Sellers</a>
-                </div>
-
-                <div class="menu-column">
-                  <a href="#shoes" class="link-black">Shoes</a>
-                  <a href="#clothes" class="link-black">Clothes</a>
-                  <a href="#accessories" class="link-black">Accessories</a>
-                  <a href="#clearance" class="link-red">Clearance</a>
-                </div>
-
-                <div class="menu-image">
-                  <img src="images/menuImage.jpg" alt="Women's Collection">
-                </div>
-              </div>
-            </ul>
-          </li>
-
-          <!-- Kids Dropdown -->
-          <li class="dropdown">
-            <a href="#" class="kids-link">Kids</a>
-            <ul class="dropdown-menu">
-              <div class="menu-container">
-                <div class="menu-column">
-                  <a href="#new-arrivals" class="link">New Arrivals</a>
-                  <a href="#best-sellers" class="link">Best Sellers</a>
-                </div>
-
-                <div class="menu-column">
-                  <a href="#shoes" class="link-black">Shoes</a>
-                  <a href="#clothes" class="link-black">Clothes</a>
-                </div>
-
-                <div class="menu-image">
-                  <img src="images/menuImage.jpg" alt="Kids' Collection">
-                </div>
-              </div>
-            </ul>
-          </li>
-        </ul>
-
-        <div class="nav-right">
-          <a href="#search" aria-label="Search"><i class="fas fa-search"></i></a>
-          <a href="#user" aria-label="User Account"><i class="fas fa-user"></i></a>
-          <a href="#cart" aria-label="Shopping Cart"><i class="fas fa-shopping-cart"></i></a>
-        </div>
-      </nav>
-    </header>
-
-    <!-- Carousel Section -->
-    <div class="carousel">
-      <div class="carousel-slides">
-        <img src="images/carousel530.jpg" alt="slide-active">
-        <img src="images/carousel550.jpg" alt="slide">
-        <img src="images/carousel9060.jpg" alt="slide">
+  <!-- Navbar -->
+  <header>
+    <nav class="navbar">
+      <button class="hamburger" aria-label="Toggle navigation">
+        <i class="fas fa-bars"></i>
+      </button>
+      <div class="nav-left">
+        <a href="#" class="logo" aria-label="Go to homepage">
+          <img src="images/nblogo.png" alt="New Balance Logo"/>
+        </a>
       </div>
-      <button class="prev"><img src="images/arrow-left.png" alt="Previous"></button>
-      <button class="next"><img src="images/arrow-right.png" alt="Next"></button>
-      <br>
-      <div class="carousel-indicators">
-        <!-- <button class="active" data-slide="0"></button> -->
-         <button class="indicator active" data-slide="0"></button>
-        <button class="indicator" data-slide="1"></button>
-        <button class="indicator" data-slide="2"></button>
+
+      <ul class="nav-links">
+        <!-- Reusable Dropdown -->
+        <li class="dropdown">
+          <button class="dropdown-toggle">New</button>
+          <div class="dropdown-menu" role="menu">
+            <div class="menu-container">
+              <div class="menu-column">
+                <a href="#" class="btn-black">Launch Calendar</a>
+                <a href="#">New Arrivals</a>
+                <a href="#">Best Sellers</a>
+              </div>
+              <div class="menu-column">
+                <a href="#">Shoes</a>
+                <a href="#">Clothes</a>
+                <a href="#">Accessories</a>
+                <a href="#" class="link-red">Clearance</a>
+              </div>
+              <div class="menu-column menu-image">
+                <img src="images/menuImage.jpg" alt="Model"/>
+              </div>
+            </div>
+          </div>
+        </li>
+
+        <li class="dropdown">
+          <a href="#">Men</a>
+          <div class="dropdown-menu">
+            <div class="menu-container">
+              <div class="menu-column">
+                <a href="#" class="btn-black">Launch Calendar</a>
+                <a href="#">New Arrivals</a>
+                <a href="#">Best Sellers</a>
+              </div>
+              <div class="menu-column">
+                <a href="#">Shoes</a>
+                <a href="#">Clothes</a>
+                <a href="#">Accessories</a>
+                <a href="#" class="link-red">Clearance</a>
+              </div>
+              <div class="menu-column menu-image">
+                <img src="images/menuImage.jpg" alt="Model"/>
+              </div>
+            </div>
+          </div>
+        </li>
+
+        <li class="dropdown">
+          <a href="#">Women</a>
+          <div class="dropdown-menu">
+            <div class="menu-container">
+              <div class="menu-column">
+                <a href="#" class="btn-black">Launch Calendar</a>
+                <a href="#">New Arrivals</a>
+                <a href="#">Best Sellers</a>
+              </div>
+              <div class="menu-column">
+                <a href="#">Shoes</a>
+                <a href="#">Clothes</a>
+                <a href="#">Accessories</a>
+                <a href="#" class="link-red">Clearance</a>
+              </div>
+              <div class="menu-column menu-image">
+                <img src="images/menuImage.jpg" alt="Model"/>
+              </div>
+            </div>
+          </div>
+        </li>
+
+        <li class="dropdown">
+          <a href="#">Kids</a>
+          <div class="dropdown-menu">
+            <div class="menu-container">
+              <div class="menu-column">
+                <a href="#" class="btn-black">Launch Calendar</a>
+                <a href="#">New Arrivals</a>
+                <a href="#">Best Sellers</a>
+              </div>
+              <div class="menu-column">
+                <a href="#">Shoes</a>
+                <a href="#">Clothes</a>
+                <a href="#">Accessories</a>
+                <a href="#" class="link-red">Clearance</a>
+              </div>
+              <div class="menu-column menu-image">
+                <img src="images/menuImage.jpg" alt="Model"/>
+              </div>
+            </div>
+          </div>
+        </li>
+      </ul>
+
+
+      <div class="nav-right">
+        <a href="#search" aria-label="Search"><i class="fas fa-search"></i></a>
+        <a href="#user" aria-label="User"><i class="fas fa-user"></i></a>
+        <a href="#cart" aria-label="Shopping Cart"><i class="fas fa-shopping-cart"></i></a>
       </div>
+    </nav>
+  </header>
+
+  <!-- Carousel -->
+  <section class="carousel">
+    <div class="carousel-slides">
+      <img src="images/carousel530.jpg" alt="Slide 1"/>
+      <img src="images/carousel550.jpg" alt="Slide 2"/>
+      <img src="images/carousel9060.jpg" alt="Slide 3"/>
     </div>
-<br>
-    <!-- 'Just Added' Section -->
-     <div class="just-added">
-        <div class="item">
-            <img src="images/plumCrew1.webp" class="default">
-            <img src="images/crewcolour.webp" class="hover">
-        </div>
-        <div class="item">
-            <img src="images/1906crimsonSea1.webp" class="default">
-            <img src="images/1906crimsonSea2.webp" class="hover">
-        </div>
-        <div class="item">
-            <img src="images/9060mbWhite1.webp" class="default">
-            <img src="images/9060mbWhite2.webp" class="hover">
-        </div>
-     </div>
-  </body>
+    <button class="prev" aria-label="Previous Slide"><img src="images/arrow-left.png" alt="Previous"/></button>
+    <button class="next" aria-label="Next Slide"><img src="images/arrow-right.png" alt="Next"/></button>
+   <br/>
+   <br/>
+    <div class="carousel-indicators">
+      <button class="indicator active" data-slide="0" aria-label="Slide 1"></button>
+      <button class="indicator" data-slide="1" aria-label="Slide 2"></button>
+      <button class="indicator" data-slide="2" aria-label="Slide 3"></button>
+    </div>
+  </section>
+
+  <!-- Just Added Section -->
+  <section class="just-added">
+    <div class="item">
+      <img src="images/plumCrew1.webp" class="default" alt="Plum Crew"/>
+      <img src="images/crewcolour.webp" class="hover" alt="Plum Crew Hover"/>
+    </div>
+    <div class="item">
+      <img src="images/1906crimsonSea1.webp" class="default" alt="1906 Crimson"/>
+      <img src="images/1906crimsonSea2.webp" class="hover" alt="1906 Crimson Hover"/>
+    </div>
+    <div class="item">
+      <img src="images/9060mbWhite1.webp" class="default" alt="9060 White"/>
+      <img src="images/9060mbWhite2.webp" class="hover" alt="9060 White Hover"/>
+    </div>
+  </section>
+
+</body>
 </html>
