--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
       </div>
 
       <ul class="nav-links">
-        <!-- Reusable Dropdown -->
         <li class="dropdown">
           <button class="dropdown-toggle">New</button>
           <div class="dropdown-menu" role="menu">
@@ -164,6 +163,22 @@
       <img src="images/9060mbWhite2.webp" class="hover" alt="9060 White Hover"/>
     </div>
   </section>
+
+  <!-- Back to Top Button -->
+<button id="backToTopBtn" aria-label="Back to top">
+  <i class="fas fa-chevron-up"></i>
+</button>
+
+  <!-- Footer -->
+<footer class="footer">
+  <div class="footer-links">
+    <a href="#">Privacy Policy</a>
+    <a href="#">Terms of Service</a>
+    <a href="#">Contact</a>
+    <a href="#">About</a>
+  </div>
+  <p class="footer-copy">&copy; 2025 New Balance. All rights reserved.</p>
+</footer>
 
 </body>
 </html>
