--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <!-- Navbar -->
   <header>
     <nav class="navbar">
-      <button class="hamburger" aria-label="Toggle navigation">
+      <button class="hamburger" aria-label="Toggle navigation" aria-expanded="false">
         <i class="fas fa-bars"></i>
       </button>
       <div class="nav-left">
@@ -31,7 +31,7 @@
         </a>
       </div>
 
-      <ul class="nav-links">
+      <ul class="nav-links" id="navLinks">
         <li class="dropdown">
           <button class="dropdown-toggle">New</button>
           <div class="dropdown-menu" role="menu">
@@ -121,7 +121,6 @@
         </li>
       </ul>
 
-
       <div class="nav-right">
         <a href="#search" aria-label="Search"><i class="fas fa-search"></i></a>
         <a href="#user" aria-label="User"><i class="fas fa-user"></i></a>
@@ -137,10 +136,12 @@
       <img src="images/carousel550.jpg" alt="Slide 2"/>
       <img src="images/carousel9060.jpg" alt="Slide 3"/>
     </div>
-    <button class="prev" aria-label="Previous Slide"><img src="images/arrow-left.png" alt="Previous"/></button>
-    <button class="next" aria-label="Next Slide"><img src="images/arrow-right.png" alt="Next"/></button>
-   <br/>
-   <br/>
+    <button class="prev" aria-label="Previous Slide">
+      <img src="images/arrow-left.png" alt="Previous"/>
+    </button>
+    <button class="next" aria-label="Next Slide">
+      <img src="images/arrow-right.png" alt="Next"/>
+    </button>
     <div class="carousel-indicators">
       <button class="indicator active" data-slide="0" aria-label="Slide 1"></button>
       <button class="indicator" data-slide="1" aria-label="Slide 2"></button>
@@ -165,20 +166,20 @@
   </section>
 
   <!-- Back to Top Button -->
-<button id="backToTopBtn" aria-label="Back to top">
-  <i class="fas fa-chevron-up"></i>
-</button>
+  <button id="backToTopBtn" aria-label="Back to top">
+    <i class="fas fa-chevron-up"></i>
+  </button>
 
   <!-- Footer -->
-<footer class="footer">
-  <div class="footer-links">
-    <a href="#">Privacy Policy</a>
-    <a href="#">Terms of Service</a>
-    <a href="#">Contact</a>
-    <a href="#">About</a>
-  </div>
-  <p class="footer-copy">&copy; 2025 New Balance. All rights reserved.</p>
-</footer>
+  <footer class="footer">
+    <div class="footer-links">
+      <a href="#">Privacy Policy</a>
+      <a href="#">Terms of Service</a>
+      <a href="#">Contact</a>
+      <a href="#">About</a>
+    </div>
+    <p class="footer-copy">&copy; 2025 New Balance. All rights reserved.</p>
+  </footer>
 
 </body>
 </html>
