--- a/index.html
+++ b/index.html
@@ -4,22 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>New Balance</title>
-
-  <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com"/>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet"/>
-
-  <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer"/>
-
-  <!-- Styles -->
   <link rel="stylesheet" href="/css/main.css"/>
   <script defer src="/js/main.js"></script>
 </head>
 <body>
-
-  <!-- Navbar -->
   <header>
     <nav class="navbar">
       <button class="hamburger" aria-label="Toggle navigation" aria-expanded="false">
@@ -30,7 +22,6 @@
           <img src="images/nblogo.png" alt="New Balance Logo"/>
         </a>
       </div>
-
       <ul class="nav-links" id="navLinks">
         <li class="dropdown">
           <button class="dropdown-toggle">New</button>
@@ -53,10 +44,9 @@
             </div>
           </div>
         </li>
-
         <li class="dropdown">
           <a href="#">Men</a>
-          <div class="dropdown-menu">
+          <div class="dropdown-menu" role="menu">
             <div class="menu-container">
               <div class="menu-column">
                 <a href="#" class="btn-black">Launch Calendar</a>
@@ -75,10 +65,9 @@
             </div>
           </div>
         </li>
-
         <li class="dropdown">
           <a href="#">Women</a>
-          <div class="dropdown-menu">
+          <div class="dropdown-menu" role="menu">
             <div class="menu-container">
               <div class="menu-column">
                 <a href="#" class="btn-black">Launch Calendar</a>
@@ -97,10 +86,9 @@
             </div>
           </div>
         </li>
-
         <li class="dropdown">
           <a href="#">Kids</a>
-          <div class="dropdown-menu">
+          <div class="dropdown-menu" role="menu">
             <div class="menu-container">
               <div class="menu-column">
                 <a href="#" class="btn-black">Launch Calendar</a>
@@ -120,7 +108,6 @@
           </div>
         </li>
       </ul>
-
       <div class="nav-right">
         <a href="#search" aria-label="Search"><i class="fas fa-search"></i></a>
         <a href="#user" aria-label="User"><i class="fas fa-user"></i></a>
@@ -128,8 +115,6 @@
       </div>
     </nav>
   </header>
-
-  <!-- Carousel -->
   <section class="carousel">
     <div class="carousel-slides">
       <img src="images/carousel530.jpg" alt="Slide 1"/>
@@ -142,35 +127,37 @@
     <button class="next" aria-label="Next Slide">
       <img src="images/arrow-right.png" alt="Next"/>
     </button>
+    <br/>
+    <br/>
     <div class="carousel-indicators">
       <button class="indicator active" data-slide="0" aria-label="Slide 1"></button>
       <button class="indicator" data-slide="1" aria-label="Slide 2"></button>
       <button class="indicator" data-slide="2" aria-label="Slide 3"></button>
     </div>
   </section>
-
-  <!-- Just Added Section -->
   <section class="just-added">
-    <div class="item">
-      <img src="images/plumCrew1.webp" class="default" alt="Plum Crew"/>
-      <img src="images/crewcolour.webp" class="hover" alt="Plum Crew Hover"/>
-    </div>
-    <div class="item">
-      <img src="images/1906crimsonSea1.webp" class="default" alt="1906 Crimson"/>
-      <img src="images/1906crimsonSea2.webp" class="hover" alt="1906 Crimson Hover"/>
-    </div>
-    <div class="item">
-      <img src="images/9060mbWhite1.webp" class="default" alt="9060 White"/>
-      <img src="images/9060mbWhite2.webp" class="hover" alt="9060 White Hover"/>
+    <h2 class="section-title">Just Added</h2>
+    <div class="just-added-container">
+      <div class="item">
+        <img src="images/plumCrew1.webp" class="default" alt="Plum Crew"/>
+        <img src="images/crewcolour.webp" class="hover" alt="Plum Crew Hover"/>
+        <p class="item-title">Made in USA Crewneck Sweatshirt</p>
+      </div>
+      <div class="item">
+        <img src="images/1906crimsonSea1.webp" class="default" alt="1906 Crimson"/>
+        <img src="images/1906crimsonSea2.webp" class="hover" alt="1906 Crimson Hover"/>
+        <p class="item-title">1906A</p>
+      </div>
+      <div class="item">
+        <img src="images/9060mbWhite1.webp" class="default" alt="9060 White"/>
+        <img src="images/9060mbWhite2.webp" class="hover" alt="9060 White Hover"/>
+        <p class="item-title">9060</p>
+      </div>
     </div>
   </section>
-
-  <!-- Back to Top Button -->
   <button id="backToTopBtn" aria-label="Back to top">
     <i class="fas fa-chevron-up"></i>
   </button>
-
-  <!-- Footer -->
   <footer class="footer">
     <div class="footer-links">
       <a href="#">Privacy Policy</a>
@@ -180,6 +167,5 @@
     </div>
     <p class="footer-copy">&copy; 2025 New Balance. All rights reserved.</p>
   </footer>
-
 </body>
 </html>
